# BNGL-Models

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
analytical_odes/: README.md  _verify_common.py
bench_models/: bench_blbr_cooperativity_posner2004.bngl  bench_blbr_cooperativity_posner2004_rings.bngl  bench_blbr_dembo1978.bngl  bench_blbr_heterogeneity_goldstein1980.bngl  bench_blbr_rings_posner1995_no_rings.bngl
bench_rulehub/: example3_fit.bngl  tcr_gen20ind9.bngl  tcr_iter28p4h2.bngl  tcr_iter9p44.bngl
bngl_models/: Bergman1989.bngl  DN2015b_michaelis_menten.bngl  Dreisigmeyer2008.bngl  EXCLUSION_REPORT.md  Goldbeter1996.bngl  HBF1998_brusselator.bngl  HBF1998_semiconductor_exciton.bngl  I1988_metabolic_pathway.bngl  Krishna2006.bngl  Lander2009.bngl  Lipniacki2006.bngl  MS2007_MM_to_GMA.bngl  MS2007_tryptophan_operon.bngl  Mangan2003_CoherentFFL_AND.bngl  Mueller2006_RepLeaky_n3.bngl  Ozbudak2004_LacOperon_Simplified.bngl  P2011_branched_SC.bngl  P2011_linear_pathway_MM.bngl  Rosenfeld2002_NegativeAutoregulation_2D.bngl  S1987_A1_exponential.bngl  S1987_A4_logistic.bngl  S1987_B1_lotka_volterra.bngl  S1987_B2_linear_chain.bngl  S1987_B3_nonlinear_chain.bngl  S1987_C1_decay_chain.bngl  S1987_C2_decay_chain2.bngl  S1987_C3_parabolic_pde.bngl  S1988_Monod_chemostat.bngl  Samoilov2005_FutileCycle.bngl  Selkov1968_GlycolyticOscillator.bngl  V1988a_endemic_infection.bngl  V1988b_gma_to_ssystem.bngl  V1990_cooke_endemic.bngl  V1990_kemper_endemic.bngl  V2005_bistable_gene.bngl  Xiong2018_ContactKilling_Inhibitor.bngl  m01_exp_decay.bngl  m02_logistic.bngl  m03_Lotka_Volterra.bngl  m04_mass_action_branch.bngl  (+14 more)
(+3046 files in other folders)
