[project]
name = "bngl-models"
version = "0.1.0"
description = "Curated BNGL models with independently verified simulation protocols"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scipy>=1.14",
]

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.14.0",
]
notebook = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "nbclient>=0.10",
  "nbformat>=5.10",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["**/*.ipynb", "models/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
